Fix the unreadable <select> with the Tomorrow theme.

--- a/css/tomorrow.css
+++ b/css/tomorrow.css
@@ -30,6 +30,12 @@
   background-color: #282A2E;
   border-color: #111;
 }
+:root.tomorrow #qr select {
+  color: #C5C8C6;
+}
+:root.tomorrow #qr option {
+  color: #000;
+}
 :root.tomorrow .qrpreview {
   background-color: rgba(255, 255, 255, .15);
 }
